# astral-uv-python-package-template

./: pyproject.toml
