[project]
name = "astral-uv-python-package-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "michealroberts", email = "michael@observerly.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
